fix menu placement in collapsed mode

--- a/Source/Blazorise.AntDesign/Styles/components/_bar.scss
+++ b/Source/Blazorise.AntDesign/Styles/components/_bar.scss
@@ -1168,7 +1168,7 @@
             left: calc(100% - 1px);
             right: auto;
             margin: 0 !important;
-            max-height: 50vh;
+            max-height: calc(100vh - var(--ant-padding) * 2);
             display: flex;
 
             > .ant-menu.ant-menu-sub.ant-menu-vertical,
